<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_login"
    android:padding="16dp">

    <LinearLayout
        android:id="@+id/login_login_ll"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <com.yanshi.my36kr.view.DeletableEditText
            android:id="@+id/login_username_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_username"
            android:drawablePadding="6dp"
            android:drawableRight="@drawable/ic_edit_text_delete"
            android:ems="12"
            android:hint="@string/user_username"
            android:inputType="text"
            android:padding="6dp"
            android:singleLine="true"
            android:textColor="@color/white"
            android:textColorHint="@color/tv_primary_color"
            android:textSize="18sp" />

        <com.yanshi.my36kr.view.DeletableEditText
            android:id="@+id/login_password_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_password"
            android:drawablePadding="6dp"
            android:drawableRight="@drawable/ic_edit_text_delete"
            android:ems="12"
            android:hint="@string/user_password"
            android:inputType="textPassword"
            android:padding="6dp"
            android:singleLine="true"
            android:textColor="@color/white"
            android:textColorHint="@color/tv_primary_color"
            android:textSize="18sp" />

        <com.yanshi.my36kr.view.DeletableEditText
            android:id="@+id/login_register_email_et"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_email"
            android:drawablePadding="8dp"
            android:drawableRight="@drawable/ic_edit_text_delete"
            android:ems="12"
            android:hint="@string/user_email"
            android:inputType="textEmailAddress"
            android:padding="6dp"
            android:singleLine="true"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:visibility="gone" />

        <Button
            android:id="@+id/login_login_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/app_btn_selector"
            android:text="@string/login_login"
            android:textColor="@color/white"
            android:textSize="18sp" />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/login_login_ll"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="16dp"
        android:text="@string/app_name"
        android:textColor="@color/white"
        android:textSize="22sp" />

    <Button
        android:id="@+id/login_forget_password_btn"
        style="?android:buttonBarButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:text="@string/login_forget_password"
        android:textColor="@color/primary_color"
        android:textSize="18sp" />

    <Button
        android:id="@+id/login_register_btn"
        style="?android:buttonBarButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/login_forget_password_btn"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:text="@string/login_register_now"
        android:textColor="@color/primary_color"
        android:textSize="18sp" />
</RelativeLayout>